--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -54,6 +54,11 @@
     <Compile Include="Domain\HouseMember.cs" />
     <Compile Include="Domain\User.cs" />
     <Compile Include="Domain\UserCurrentRequestStatus.cs" />
+    <Compile Include="Migrations\201904221321469_InitialCreate.cs" />
+    <Compile Include="Migrations\201904221321469_InitialCreate.Designer.cs">
+      <DependentUpon>201904221321469_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -65,6 +70,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201904221321469_InitialCreate.resx">
+      <DependentUpon>201904221321469_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
