--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -44,6 +44,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{118d1c15-a810-4849-afc7-004479b648ae}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Shared\Shared.csproj">
       <Project>{f1e04b49-2426-45ca-86a1-6b3de732593c}</Project>
       <Name>Shared</Name>
