--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -58,6 +58,10 @@
     <Compile Include="Migrations\201904221321469_InitialCreate.Designer.cs">
       <DependentUpon>201904221321469_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904230534010_addedUnique.cs" />
+    <Compile Include="Migrations\201904230534010_addedUnique.Designer.cs">
+      <DependentUpon>201904230534010_addedUnique.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\HouseMemberRepository.cs" />
@@ -88,6 +92,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201904221321469_InitialCreate.resx">
       <DependentUpon>201904221321469_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904230534010_addedUnique.resx">
+      <DependentUpon>201904230534010_addedUnique.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
