--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -62,6 +62,9 @@
   <ItemGroup>
     <Compile Include="CustomExceptions\DatabaseUpdationException.cs" />
     <Compile Include="DTO\HouseDTO.cs" />
+    <Compile Include="DTO\HouseMemberDTO.cs" />
+    <Compile Include="DTO\UserCurrentRequestStatutsDTO.cs" />
+    <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="Enums\BooleanType.cs" />
     <Compile Include="Enums\GenderType.cs" />
     <Compile Include="Enums\MaritalStatusType.cs" />
