--- a/My_Digitalizing_Census_Project/My_Digitalizing_Census_Project.csproj
+++ b/My_Digitalizing_Census_Project/My_Digitalizing_Census_Project.csproj
@@ -178,6 +178,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HouseController.cs" />
+    <Compile Include="Controllers\HouseMemberController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
