--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -63,6 +63,8 @@
     <Compile Include="CustomExceptions\DatabaseUpdationException.cs" />
     <Compile Include="DTO\HouseDTO.cs" />
     <Compile Include="DTO\HouseMemberDTO.cs" />
+    <Compile Include="DTO\LoginedUserDTO.cs" />
+    <Compile Include="DTO\LoginUserDTO.cs" />
     <Compile Include="DTO\UserCurrentRequestStatusDTO.cs" />
     <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="Enums\BooleanType.cs" />
