--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomExceptions\DatabaseUpdationException.cs" />
+    <Compile Include="DTO\FetchedUserDTO.cs" />
     <Compile Include="DTO\HouseDTO.cs" />
     <Compile Include="DTO\HouseMemberDTO.cs" />
     <Compile Include="DTO\LoginedUserDTO.cs" />
